[package]
name = "non-steam-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
dotenv = { version = "0.15.0", optional = true }
evdev = { version = "0.13.2", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
getset = "0.1.6"
libc = "0.2.180"
sdl3 = "0.17.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
udev = "0.9.3"
zbus = { version = "5.13.1", default-features = false, features = ["tokio"] }

[features]
dotenv = ["dep:dotenv"]
